--- a/public/index.html
+++ b/public/index.html
@@ -310,6 +310,8 @@ hr.sep{border:0;height:1px;background:linear-gradient(90deg,rgba(11,95,255,.18),
           <div class="menu" id="profileMenu" role="menu" aria-label="Menú de usuario">
             <a href="/crm">Leads</a>
             <a href="/publish-tester">Dominio</a>
+            <a href="/secuencias">Secuencias</a>
+            <a href="/analytics">Analytics</a>
             <button id="logoutBtn">Cerrar sesión</button>
           </div>
         </div>
@@ -788,6 +790,7 @@ function hookPickers(){
 }
 
 /* ==== Brief modal ==== */
+const openBriefBtn = $('#openBrief');
 openBriefBtn.addEventListener('click', ()=>{
   if(!ensureLogged()){ addMsg('system','Inicia sesión para completar tu brief.'); return; }
   const saved = BriefStore.get() || {};
@@ -825,7 +828,7 @@ $('#briefForm').addEventListener('submit', (e)=>{
 });
 
 /* ==== Chat / generación ==== */
-const TIMEOUT_MS = 1500000;
+const TIMEOUT_MS = 180000; // 3 minutos para modelos más lentos
 function addMsg(role, html){
   const div = document.createElement('div');
   div.className = `msg ${role}`; div.innerHTML = html; pane.appendChild(div); pane.scrollTop = pane.scrollHeight; return div;
@@ -834,18 +837,99 @@ function validBrief(){
   const b = BriefStore.get();
   return b && b.brand_name && slugify(b.brand_name).length >= 2;
 }
-async function sendToMake(payload){
-  const ctrl = new AbortController(); const t = setTimeout(()=>ctrl.abort('timeout'), TIMEOUT_MS);
-  let r;
-  try{
-    r = await fetch(MAKE_URL, { method:'POST', headers:{ 'Content-Type':'text/plain;charset=UTF-8', 'Accept':'text/html' }, body: JSON.stringify(payload), signal: ctrl.signal });
-  }catch(e){ clearTimeout(t); if(e.name==='AbortError') throw new Error('Timeout del servidor (60s).'); throw new Error('No se pudo conectar: ' + e.message); }
-  clearTimeout(t);
-  const html = await r.text();
-  if(!r.ok) throw new Error('Status ' + r.status + '. ' + html.slice(0,200));
-  if(!/^<!doctype html/i.test(html) || !/<\/html>/i.test(html)) throw new Error('La respuesta no es un HTML completo.');
-  return html;
+
+/* === NUEVO: helpers para extraer HTML aunque Make devuelva JSON o fences === */
+function stripCodeFences(s){
+  if(!s) return '';
+  // Quita ```html ... ``` o ``` ... ```
+  return s.replace(/```html\s*([\s\S]*?)```/gi, '$1').replace(/```\s*([\s\S]*?)```/g, '$1').trim();
 }
+function extractHtmlFromText(txt){
+  if(!txt) return '';
+  // 1) Intentar bloque <!doctype ... </html>
+  const m = txt.match(/<!doctype\s+html[\s\S]*<\/html>/i);
+  if(m && m[0]) return m[0].trim();
+  // 2) Quitar fences y reintentar por si el modelo envolvió en ```html
+  const unfenced = stripCodeFences(txt);
+  const m2 = unfenced.match(/<!doctype\s+html[\s\S]*<\/html>/i);
+  if(m2 && m2[0]) return m2[0].trim();
+  // 3) Si todo falla y parece HTML, devolvemos el texto “tal cual”
+  if(/<html[\s\S]*<\/html>/i.test(unfenced)) return unfenced.trim();
+  return '';
+}
+
+/* === REEMPLAZO: función robusta para recibir el HTML de Make === */
+async function sendToMake(payload){
+  const ctrl = new AbortController();
+  const t = setTimeout(()=>ctrl.abort('timeout'), TIMEOUT_MS);
+
+  try{
+    const r = await fetch(MAKE_URL, {
+      method:'POST',
+      headers:{
+        'Content-Type':'application/json; charset=utf-8',
+        'Accept':'*/*'
+      },
+      body: JSON.stringify(payload),
+      signal: ctrl.signal
+    });
+    clearTimeout(t);
+
+    const ct = (r.headers.get('content-type')||'').toLowerCase();
+
+    // text/html directo
+    if(ct.includes('text/html')){
+      const html = await r.text();
+      if(!/<!doctype\s+html/i.test(html)) {
+        const extracted = extractHtmlFromText(html);
+        if(extracted) return extracted;
+      }
+      return html;
+    }
+
+    // JSON y otros
+    const raw = await r.text();
+    try{
+      const j = JSON.parse(raw);
+
+      if(typeof j.html === 'string'){
+        const extracted = extractHtmlFromText(j.html);
+        if(extracted) return extracted;
+      }
+      if(j.choices?.[0]?.message?.content){
+        const extracted = extractHtmlFromText(j.choices[0].message.content);
+        if(extracted) return extracted;
+      }
+      const candidate = j.output_text || j.content || j.result || '';
+      if(typeof candidate === 'string'){
+        const extracted = extractHtmlFromText(candidate);
+        if(extracted) return extracted;
+      }
+      if(Array.isArray(j.parts)){
+        const joined = j.parts.map(p=>p?.text||'').join('\n');
+        const extracted = extractHtmlFromText(joined);
+        if(extracted) return extracted;
+      }
+
+      const maybe = extractHtmlFromText(raw);
+      if(maybe) return maybe;
+
+      throw new Error('La respuesta JSON no contiene un HTML válido.');
+    }catch(_jsonErr){
+      // Texto plano: intentamos extraer
+      const extracted = extractHtmlFromText(raw);
+      if(extracted) return extracted;
+      throw new Error('La respuesta no parece HTML ni JSON utilizable.');
+    }
+  }catch(e){
+    clearTimeout(t);
+    if(e?.name === 'AbortError'){
+      throw new Error(`Timeout del servidor (${Math.round(TIMEOUT_MS/1000)}s).`);
+    }
+    throw e;
+  }
+}
+
 function brandSlug(){
   const b = BrandStore.get(); if(b?.slug) return b.slug;
   const saved = BriefStore.get(); return slugify(saved?.brand_name || 'demo');
@@ -882,40 +966,44 @@ async function generateFromPrompt(){
   const thinking = addMsg('assistant', 'Generando tu funnel… ⏳');
 
   try{
-    // registro opcional (slug del proyecto generado)
+    // registro opcional (si falla, no bloquea)
     try{
       await fetch(CRM_ENDPOINT, {
         method:'POST', headers:{ 'Content-Type':'text/plain;charset=UTF-8' },
         body: JSON.stringify({ action:'registerProject', id_token: ID_TOKEN, project_slug, owner_name: USER_NAME })
       }).then(r=>r.json());
-    }catch(_){}
+    }catch(e){
+      console.warn('registerProject falló', e);
+    }
 
     const html = await sendToMake(payload);
     thinking.remove();
 
-    // PREVIEW
-    if(lastBlobURL) URL.revokeObjectURL(lastBlobURL);
-    lastHTML = html;
-    lastBlobURL = URL.createObjectURL(new Blob([html], {type:'text/html;charset=utf-8'}));
-    previewFrame.removeAttribute('sandbox'); 
-    previewFrame.srcdoc = html;
-    codeBox.textContent = html;
-    $('#previewModal').classList.remove('show-code');
-    setPreview(true);
+    if(html && /<html[\s\S]*<\/html>/i.test(html)){
+      // PREVIEW
+      if(lastBlobURL) URL.revokeObjectURL(lastBlobURL);
+      lastHTML = html;
+      lastBlobURL = URL.createObjectURL(new Blob([html], {type:'text/html;charset=utf-8'}));
+      previewFrame.removeAttribute('sandbox'); 
+      previewFrame.srcdoc = html;
+      codeBox.textContent = html;
+      $('#previewModal').classList.remove('show-code');
+      setPreview(true);
 
-    // NEW: persistir landing en pf_landings
-    const brand = BrandStore.get();
-    const id = `landing-${Date.now()}`;
-    const title = `${brand?.name || 'Mi marca'} — ${selectedTemplate?.name || 'custom'}`;
-    addLandingToLocal({ id, title, html });
+      // Guardar landing persistente
+      const brand = BrandStore.get();
+      const id = `landing-${Date.now()}`;
+      const title = `${brand?.name || 'Mi marca'} — ${selectedTemplate?.name || 'custom'}`;
+      addLandingToLocal({ id, title, html });
+      renderRecents();
 
-    // Re-pintar sección de recientes
-    renderRecents();
-
-    addMsg('assistant', `Listo ✅ Guardé tu landing. Podés verla en “Últimas landings” y publicarla desde <a href="/publish-tester">Dominio</a>.`);
-    composer.value=''; selectedTemplate = null;
+      addMsg('assistant', `✅ Landing generada y guardada. Podés publicarla desde <a href="/publish-tester">Dominio</a>.`);
+      composer.value=''; selectedTemplate = null;
+    } else {
+      addMsg('assistant','⚠ Se recibió una respuesta inválida (sin HTML). Revisa el escenario de Make o vuelve a intentar con otro prompt.');
+    }
   }catch(err){
-    thinking.textContent = 'Hubo un problema: ' + (err.message || err);
+    thinking.textContent = '❌ Error al generar: ' + (err.message || err);
   }
 }
 
@@ -923,7 +1011,7 @@ async function generateFromPrompt(){
 sendBtn.addEventListener('click', generateFromPrompt);
 composer.addEventListener('keydown', (e)=>{ if(e.key==='Enter' && !e.shiftKey){ e.preventDefault(); generateFromPrompt(); } });
 loadDemoBtn.addEventListener('click', ()=>{
-  composer.value = "Crea una landing opt-in para un checklist de productividad (3 beneficios y FAQ). Tono claro, profesional, sin promesas vacías. CTA a ‘Recibir mi checklist’.";
+  composer.value = "Crea una landing opt-in para un checklist de productividad (3 beneficios y FAQ). Tono claro, profesional, sin promesas vacías. CTA a ‘Recibir mi checklist’. Estética Apple-like con glassmorphism suave y animaciones CSS.";
   addMsg('assistant','Cargué un prompt de ejemplo. ¡Dale a Generar!');
 });
 
