--- a/public/index.html
+++ b/public/index.html
@@ -310,8 +310,6 @@ hr.sep{border:0;height:1px;background:linear-gradient(90deg,rgba(11,95,255,.18),
           <div class="menu" id="profileMenu" role="menu" aria-label="Menú de usuario">
             <a href="/crm">Leads</a>
             <a href="/publish-tester">Dominio</a>
-            <a href="/secuencias">Secuencias</a>
-            <a href="/analytics">Analytics</a>
             <button id="logoutBtn">Cerrar sesión</button>
           </div>
         </div>
@@ -423,7 +421,7 @@ hr.sep{border:0;height:1px;background:linear-gradient(90deg,rgba(11,95,255,.18),
     </div>
   </section>
 
-  <!-- MODAL BRIEF (onboarding mejorado) -->
+  <!-- MODAL BRIEF -->
   <div class="modal" id="briefModal" aria-hidden="true" aria-labelledby="briefTitle" role="dialog">
     <div class="scrim" data-close></div>
     <div class="dialog">
@@ -669,7 +667,7 @@ window.addEventListener('load', async () => {
         const ls = $('#loginStatus'); if(ls) ls.textContent = 'Conectado: ' + USER_EMAIL;
         if(USER_PIC){ avatarImg.src = USER_PIC; }
 
-        // NEW: registrar/actualizar en Excel también en autologin
+        // Registrar/actualizar en Excel también en autologin
         saveUserToCRM({ idToken: ID_TOKEN, email: USER_EMAIL, name: USER_NAME, source: 'home_autologin' });
 
         // Onboarding automático si nunca guardó marca/brief
@@ -706,7 +704,7 @@ async function onGoogleSignIn(resp){
   if(USER_PIC){ avatarImg.src = USER_PIC; }
   setLoginModal(false);
 
-  // NEW: persistir usuario en Excel al iniciar sesión
+  // Persistir usuario en Excel al iniciar sesión
   saveUserToCRM({ idToken: ID_TOKEN, email: USER_EMAIL, name: USER_NAME, source: 'home_login' });
 
   // Si es la primera vez → abrir brief
@@ -790,7 +788,6 @@ function hookPickers(){
 }
 
 /* ==== Brief modal ==== */
-const openBriefBtn = $('#openBrief');
 openBriefBtn.addEventListener('click', ()=>{
   if(!ensureLogged()){ addMsg('system','Inicia sesión para completar tu brief.'); return; }
   const saved = BriefStore.get() || {};
@@ -814,7 +811,7 @@ $('#briefForm').addEventListener('submit', (e)=>{
   // Guardar brief
   BriefStore.set(data);
 
-  // Guardar marca (una sola vez por usuario) / actualizar nombre mantiene el mismo slug si ya existía
+  // Guardar/actualizar marca
   const name = String(data.brand_name||'').trim();
   if(name){
     const prev = BrandStore.get();
@@ -828,7 +825,7 @@ $('#briefForm').addEventListener('submit', (e)=>{
 });
 
 /* ==== Chat / generación ==== */
-const TIMEOUT_MS = 180000; // 3 minutos para modelos más lentos
+const TIMEOUT_MS = 1500000; // mantengo tu valor alto
 function addMsg(role, html){
   const div = document.createElement('div');
   div.className = `msg ${role}`; div.innerHTML = html; pane.appendChild(div); pane.scrollTop = pane.scrollHeight; return div;
@@ -841,19 +838,15 @@ function validBrief(){
 /* === NUEVO: helpers para extraer HTML aunque Make devuelva JSON o fences === */
 function stripCodeFences(s){
   if(!s) return '';
-  // Quita ```html ... ``` o ``` ... ```
   return s.replace(/```html\s*([\s\S]*?)```/gi, '$1').replace(/```\s*([\s\S]*?)```/g, '$1').trim();
 }
 function extractHtmlFromText(txt){
   if(!txt) return '';
-  // 1) Intentar bloque <!doctype ... </html>
   const m = txt.match(/<!doctype\s+html[\s\S]*<\/html>/i);
   if(m && m[0]) return m[0].trim();
-  // 2) Quitar fences y reintentar por si el modelo envolvió en ```html
   const unfenced = stripCodeFences(txt);
   const m2 = unfenced.match(/<!doctype\s+html[\s\S]*<\/html>/i);
   if(m2 && m2[0]) return m2[0].trim();
-  // 3) Si todo falla y parece HTML, devolvemos el texto “tal cual”
   if(/<html[\s\S]*<\/html>/i.test(unfenced)) return unfenced.trim();
   return '';
 }
@@ -877,7 +870,7 @@ async function sendToMake(payload){
 
     const ct = (r.headers.get('content-type')||'').toLowerCase();
 
-    // text/html directo
+    // Caso 1: HTML directo
     if(ct.includes('text/html')){
       const html = await r.text();
       if(!/<!doctype\s+html/i.test(html)) {
@@ -887,7 +880,7 @@ async function sendToMake(payload){
       return html;
     }
 
-    // JSON y otros
+    // Caso 2: JSON u otro → intentar extraer
     const raw = await r.text();
     try{
       const j = JSON.parse(raw);
@@ -916,7 +909,6 @@ async function sendToMake(payload){
 
       throw new Error('La respuesta JSON no contiene un HTML válido.');
     }catch(_jsonErr){
-      // Texto plano: intentamos extraer
       const extracted = extractHtmlFromText(raw);
       if(extracted) return extracted;
       throw new Error('La respuesta no parece HTML ni JSON utilizable.');
@@ -972,9 +964,7 @@ async function generateFromPrompt(){
         method:'POST', headers:{ 'Content-Type':'text/plain;charset=UTF-8' },
         body: JSON.stringify({ action:'registerProject', id_token: ID_TOKEN, project_slug, owner_name: USER_NAME })
       }).then(r=>r.json());
-    }catch(e){
-      console.warn('registerProject falló', e);
-    }
+    }catch(_){}
 
     const html = await sendToMake(payload);
     thinking.remove();
@@ -990,17 +980,17 @@ async function generateFromPrompt(){
       $('#previewModal').classList.remove('show-code');
       setPreview(true);
 
-      // Guardar landing persistente
+      // persistir landing
       const brand = BrandStore.get();
       const id = `landing-${Date.now()}`;
       const title = `${brand?.name || 'Mi marca'} — ${selectedTemplate?.name || 'custom'}`;
       addLandingToLocal({ id, title, html });
       renderRecents();
 
-      addMsg('assistant', `✅ Landing generada y guardada. Podés publicarla desde <a href="/publish-tester">Dominio</a>.`);
+      addMsg('assistant', `Listo ✅ Guardé tu landing. Podés publicarla desde <a href="/publish-tester">Dominio</a>.`);
       composer.value=''; selectedTemplate = null;
     } else {
-      addMsg('assistant','⚠ Se recibió una respuesta inválida (sin HTML). Revisa el escenario de Make o vuelve a intentar con otro prompt.');
+      addMsg('assistant','⚠ Se recibió una respuesta inválida (sin HTML). Revisá el escenario de Make o reintentá.');
     }
   }catch(err){
     thinking.textContent = '❌ Error al generar: ' + (err.message || err);
