--- a/public/index.html
+++ b/public/index.html
@@ -569,7 +569,7 @@ async function saveUserToCRM({ idToken, email, name, source = 'home_login' }) {
       body: JSON.stringify({
         action: 'upsertuser',
         id_token: idToken,
-        email, // opcional (el script usa el token)
+        email,
         name,
         source,
         ts: Date.now()
@@ -788,6 +788,7 @@ function hookPickers(){
 }
 
 /* ==== Brief modal ==== */
+const openBriefBtn = $('#openBrief');
 openBriefBtn.addEventListener('click', ()=>{
   if(!ensureLogged()){ addMsg('system','Inicia sesión para completar tu brief.'); return; }
   const saved = BriefStore.get() || {};
@@ -825,7 +826,9 @@ $('#briefForm').addEventListener('submit', (e)=>{
 });
 
 /* ==== Chat / generación ==== */
-const TIMEOUT_MS = 1500000; // mantengo tu valor alto
+/* ⬇⬇⬇ TIEMPO DE ESPERA AUMENTADO A 60 MIN ⬇⬇⬇ */
+const TIMEOUT_MS = 3600000; // 60 minutos
+
 function addMsg(role, html){
   const div = document.createElement('div');
   div.className = `msg ${role}`; div.innerHTML = html; pane.appendChild(div); pane.scrollTop = pane.scrollHeight; return div;
@@ -835,7 +838,7 @@ function validBrief(){
   return b && b.brand_name && slugify(b.brand_name).length >= 2;
 }
 
-/* === NUEVO: helpers para extraer HTML aunque Make devuelva JSON o fences === */
+/* === helpers de extracción HTML === */
 function stripCodeFences(s){
   if(!s) return '';
   return s.replace(/```html\s*([\s\S]*?)```/gi, '$1').replace(/```\s*([\s\S]*?)```/g, '$1').trim();
@@ -851,7 +854,7 @@ function extractHtmlFromText(txt){
   return '';
 }
 
-/* === REEMPLAZO: función robusta para recibir el HTML de Make === */
+/* === función robusta para recibir HTML de Make === */
 async function sendToMake(payload){
   const ctrl = new AbortController();
   const t = setTimeout(()=>ctrl.abort('timeout'), TIMEOUT_MS);
@@ -870,7 +873,6 @@ async function sendToMake(payload){
 
     const ct = (r.headers.get('content-type')||'').toLowerCase();
 
-    // Caso 1: HTML directo
     if(ct.includes('text/html')){
       const html = await r.text();
       if(!/<!doctype\s+html/i.test(html)) {
@@ -880,7 +882,6 @@ async function sendToMake(payload){
       return html;
     }
 
-    // Caso 2: JSON u otro → intentar extraer
     const raw = await r.text();
     try{
       const j = JSON.parse(raw);
@@ -916,7 +917,7 @@ async function sendToMake(payload){
   }catch(e){
     clearTimeout(t);
     if(e?.name === 'AbortError'){
-      throw new Error(`Timeout del servidor (${Math.round(TIMEOUT_MS/1000)}s).`);
+      throw new Error(`Timeout del servidor (${Math.round(TIMEOUT_MS/60000)} min).`);
     }
     throw e;
   }
@@ -955,7 +956,7 @@ async function generateFromPrompt(){
   };
 
   addMsg('user', text);
-  const thinking = addMsg('assistant', 'Generando tu funnel… ⏳');
+  const thinking = addMsg('assistant', `Generando tu funnel… ⏳ (hasta ${Math.round(TIMEOUT_MS/60000)} min)`);
 
   try{
     // registro opcional (si falla, no bloquea)
@@ -1064,4 +1065,3 @@ document.addEventListener('click', (e)=>{ if(e.target.closest('[data-close-login
 </script>
 </body>
 </html>
-
