--- a/public/index.html
+++ b/public/index.html
@@ -825,7 +825,8 @@ $('#briefForm').addEventListener('submit', (e)=>{
 });
 
 /* ==== Chat / generación ==== */
-const TIMEOUT_MS = 1500000;
+/* CUADRUPLICADO: timeout de espera de Make */
+const TIMEOUT_MS = 6000000; // 4× respecto al valor base solicitado
 function addMsg(role, html){
   const div = document.createElement('div');
   div.className = `msg ${role}`; div.innerHTML = html; pane.appendChild(div); pane.scrollTop = pane.scrollHeight; return div;
@@ -839,11 +840,15 @@ async function sendToMake(payload){
   let r;
   try{
     r = await fetch(MAKE_URL, { method:'POST', headers:{ 'Content-Type':'text/plain;charset=UTF-8', 'Accept':'text/html' }, body: JSON.stringify(payload), signal: ctrl.signal });
-  }catch(e){ clearTimeout(t); if(e.name==='AbortError') throw new Error('Timeout del servidor (60s).'); throw new Error('No se pudo conectar: ' + e.message); }
+  }catch(e){
+    clearTimeout(t);
+    if(e.name==='AbortError') throw new Error('Timeout del servidor (' + Math.round(TIMEOUT_MS/1000) + 's).');
+    throw new Error('No se pudo conectar: ' + e.message);
+  }
   clearTimeout(t);
   const html = await r.text();
   if(!r.ok) throw new Error('Status ' + r.status + '. ' + html.slice(0,200));
-  if(!/^<!doctype html/i.test(html) || !/<\/html>/i.test(html)) throw new Error('La respuesta no es un HTML completo.');
+  if(!/^\s*<!doctype html/i.test(html) || !/<\/html>\s*$/i.test(html)) throw new Error('La respuesta no es un HTML completo.');
   return html;
 }
 function brandSlug(){
