--- a/public/index.html
+++ b/public/index.html
@@ -421,7 +421,7 @@ hr.sep{border:0;height:1px;background:linear-gradient(90deg,rgba(11,95,255,.18),
     </div>
   </section>
 
-  <!-- MODAL BRIEF -->
+  <!-- MODAL BRIEF (onboarding mejorado) -->
   <div class="modal" id="briefModal" aria-hidden="true" aria-labelledby="briefTitle" role="dialog">
     <div class="scrim" data-close></div>
     <div class="dialog">
@@ -548,6 +548,26 @@ function slugify(s){
     .replace(/[^a-z0-9-]+/g,'-').replace(/--+/g,'-').replace(/^-+|-+$/g,'');
 }
 function validHex(s){ return /^#([0-9A-Fa-f]{3}|[0-9A-Fa-f]{6})$/.test((s||'').trim()); }
+function sleep(ms){ return new Promise(r=>setTimeout(r,ms)); }
+
+/* NUEVO: validadores HTML más tolerantes */
+function isFullHTML(str=''){
+  const t = String(str || '').trim();
+  if(!t) return false;
+  const low = t.toLowerCase();
+  const hasTag = low.includes('<html') && low.includes('</html>');
+  if(hasTag) return true;
+  // extraer desde ```html ... ```
+  const fence = /```html?\s*([\s\S]*?)```/i.exec(t);
+  if(fence && /<\/html>/i.test(fence[1])) return true;
+  return false;
+}
+function extractHTML(str=''){
+  const t = String(str || '');
+  if(isFullHTML(t)) return t;
+  const m = /```html?\s*([\s\S]*?)```/i.exec(t);
+  return m ? m[1] : '';
+}
 
 function setLoginModal(open){ const m=$('#loginModal'); m.classList.toggle('active', !!open); m.setAttribute('aria-hidden', open?'false':'true'); }
 function setModal(open){ const m=$('#briefModal'); m.classList.toggle('active', !!open); m.setAttribute('aria-hidden', open?'false':'true'); if(open){ setTimeout(()=> $("[name='brand_name']", m)?.focus(), 50) } }
@@ -560,6 +580,7 @@ async function apiWhoAmI(idToken){
   u.searchParams.set('id_token', idToken);
   const r = await fetch(u); return r.json();
 }
+/* Guarda/actualiza el usuario en tu Excel (Apps Script) */
 async function saveUserToCRM({ idToken, email, name, source = 'home_login' }) {
   try {
     const res = await fetch(CRM_ENDPOINT, {
@@ -599,6 +620,7 @@ const Onboarding = {
   get(){ return localStorage.getItem(this.key)==='true' },
   set(){ localStorage.setItem(this.key,'true') }
 };
+/* Landings persistentes para Home + Publish Tester */
 const LS_LANDINGS = 'pf_landings';
 function readLandings(){ try { return JSON.parse(localStorage.getItem(LS_LANDINGS) || '[]'); } catch { return []; } }
 function writeLandings(list){ localStorage.setItem(LS_LANDINGS, JSON.stringify(list || [])); }
@@ -650,6 +672,7 @@ window.addEventListener('load', async () => {
     const btn = $('#btnGoogle'); if(btn) google.accounts.id.renderButton(btn, { theme:'outline', size:'medium', type:'standard', shape:'pill' });
     const btnM = $('#btnGoogleModal'); if(btnM) google.accounts.id.renderButton(btnM, { theme:'filled_blue', size:'large', type:'standard', shape:'pill', text:'signin_with' });
   }
+  // Reusar token
   try{
     const t = localStorage.getItem('psico_id_token');
     const n = localStorage.getItem('psico_name');
@@ -664,8 +687,10 @@ window.addEventListener('load', async () => {
         const ls = $('#loginStatus'); if(ls) ls.textContent = 'Conectado: ' + USER_EMAIL;
         if(USER_PIC){ avatarImg.src = USER_PIC; }
 
+        // NEW: registrar/actualizar en Excel también en autologin
         saveUserToCRM({ idToken: ID_TOKEN, email: USER_EMAIL, name: USER_NAME, source: 'home_autologin' });
 
+        // Onboarding automático si nunca guardó marca/brief
         if(!BrandStore.exists() && !Onboarding.get()){
           setTimeout(()=> setModal(true), 300);
         }
@@ -699,8 +724,10 @@ async function onGoogleSignIn(resp){
   if(USER_PIC){ avatarImg.src = USER_PIC; }
   setLoginModal(false);
 
+  // NEW: persistir usuario en Excel al iniciar sesión
   saveUserToCRM({ idToken: ID_TOKEN, email: USER_EMAIL, name: USER_NAME, source: 'home_login' });
 
+  // Si es la primera vez → abrir brief
   if(!BrandStore.exists() && !Onboarding.get()){
     setTimeout(()=> setModal(true), 300);
   }
@@ -781,7 +808,6 @@ function hookPickers(){
 }
 
 /* ==== Brief modal ==== */
-const openBriefBtn = document.getElementById('openBrief');
 openBriefBtn.addEventListener('click', ()=>{
   if(!ensureLogged()){ addMsg('system','Inicia sesión para completar tu brief.'); return; }
   const saved = BriefStore.get() || {};
@@ -802,8 +828,10 @@ $('#briefForm').addEventListener('submit', (e)=>{
   if(!validHex(data.color_primary)) data.color_primary = '#0ea5e9';
   if(!validHex(data.color_accent)) data.color_accent = '#0b5fff';
 
+  // Guardar brief
   BriefStore.set(data);
 
+  // Guardar marca (una sola vez por usuario) / actualizar nombre mantiene el mismo slug si ya existía
   const name = String(data.brand_name||'').trim();
   if(name){
     const prev = BrandStore.get();
@@ -817,8 +845,11 @@ $('#briefForm').addEventListener('submit', (e)=>{
 });
 
 /* ==== Chat / generación ==== */
-/* Timeout TOTAL cuadruplicado + reintentos hasta recibir HTML completo */
-const TIMEOUT_MS = 60 * 60 * 1000; // 60 minutos
+/* NUEVOS límites de espera */
+const TIMEOUT_MS       = 3600000;   // 60 minutos por intento (con AbortController)
+const RETRY_TOTAL_MS   = 3600000;   // 60 minutos totales antes de dar error visible
+const RETRY_BASE_DELAY = 15000;     // 15s retraso inicial entre reintentos
+const RETRY_MAX_DELAY  = 120000;    // 2 min máximo entre reintentos
 
 function addMsg(role, html){
   const div = document.createElement('div');
@@ -829,69 +860,74 @@ function validBrief(){
   return b && b.brand_name && slugify(b.brand_name).length >= 2;
 }
 
-/* Fetch idempotente con reintentos (no lanza "no es HTML" ante respuestas intermedias) */
-async function sendToMake(payload){
-  payload.request_id = payload.request_id || (crypto.randomUUID?.() || Math.random().toString(36).slice(2));
-
-  const started  = Date.now();
-  const deadline = started + TIMEOUT_MS;
-  let attempt = 0;
-
-  while (Date.now() < deadline) {
-    const remaining = deadline - Date.now();
-    const perAttemptMs = Math.min(180000, Math.max(30000, remaining)); // 30s–180s por intento
-
-    const ctrl = new AbortController();
-    const t = setTimeout(() => ctrl.abort('timeout'), perAttemptMs);
-
-    let r, txt, ct;
-    try {
-      r = await fetch(MAKE_URL, {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json', // enviamos JSON
-          'Accept': 'text/html',              // pedimos HTML final
-          'X-Idempotency-Key': payload.request_id
-        },
-        body: JSON.stringify(payload),
-        signal: ctrl.signal
-      });
-    } catch (e) {
-      clearTimeout(t);
-      if (e.name !== 'AbortError') {
-        try { document.querySelector('.msg.assistant:last-child')?.append?.(' · reconectando…'); } catch(_){}
-      }
-      await new Promise(res => setTimeout(res, 1500));
-      attempt++;
-      continue;
-    }
-
-    clearTimeout(t);
-
-    ct  = (r.headers.get('content-type') || '').toLowerCase();
+async function sendToMakeOnce(payload){
+  const ctrl = new AbortController();
+  // Permitimos espera prolongada por intento:
+  const t = setTimeout(()=>ctrl.abort('timeout'), TIMEOUT_MS);
+  let r, txt='';
+  try{
+    r = await fetch(MAKE_URL, {
+      method:'POST',
+      headers:{
+        'Content-Type':'text/plain;charset=UTF-8',
+        'Accept':'*/*',
+        'Cache-Control':'no-store'
+      },
+      body: JSON.stringify(payload),
+      signal: ctrl.signal
+    });
     txt = await r.text();
+  }catch(e){
+    clearTimeout(t);
+    return { ok:false, reason:'network', error: e?.name==='AbortError' ? 'timeout' : (e?.message || String(e)) };
+  }
+  clearTimeout(t);
 
-    const looksHTML = ct.includes('text/html');
-    const startOk   = /^\s*<!doctype html/i.test(txt);
-    const endOk     = /<\/html>\s*$/i.test(txt);
-
-    if (r.ok && looksHTML && startOk && endOk) {
-      return txt;
-    }
-
-    // Respuesta intermedia o no-HTML: actualizar estado y reintentar
-    const thinking = document.querySelector('.msg.assistant:last-child');
-    if (thinking) {
-      const secs = Math.round((Date.now() - started) / 1000);
-      thinking.innerHTML = `Generando tu funnel… ⏳ <span class="hint">(llevamos ${secs}s, intento ${attempt + 1})</span>`;
-    }
-
-    const delay = Math.min(1000 + attempt * 1500, 10000); // 1s→10s
-    await new Promise(res => setTimeout(res, delay));
-    attempt++;
+  if(!r.ok){
+    return { ok:false, reason:'http', status:r.status, text: txt };
   }
 
-  throw new Error(`Timeout del servidor (${Math.round(TIMEOUT_MS/1000)}s).`);
+  // ¿Llegó HTML completo?
+  if(isFullHTML(txt)){
+    const html = extractHTML(txt) || txt;
+    return { ok:true, html };
+  }
+
+  // Respuesta no-HTML: tratar como "aún generando"
+  return { ok:false, reason:'not_html', text: txt };
+}
+
+/* NUEVO: espera con reintentos sin cortar UI */
+async function awaitHTMLWithRetries(payload, thinkingEl){
+  const start = Date.now();
+  let attempt = 0;
+  let delay = RETRY_BASE_DELAY;
+  let lastNonHtmlSample = '';
+
+  while(Date.now() - start < RETRY_TOTAL_MS){
+    attempt++;
+    if(thinkingEl){
+      thinkingEl.innerHTML = `Generando tu funnel… ⏳ <span class="hint">(intento ${attempt})</span>`;
+    }
+
+    const res = await sendToMakeOnce(payload);
+
+    if(res.ok && res.html){
+      return res.html;
+    }
+
+    // si la respuesta no-HTML trae algo, lo guardamos como muestra (para debug UI)
+    if(res.reason === 'not_html' && res.text){
+      lastNonHtmlSample = res.text.slice(0,180);
+    }
+
+    // pequeños descansos entre intentos
+    await sleep(delay);
+    delay = Math.min(Math.round(delay*1.35), RETRY_MAX_DELAY);
+  }
+
+  const extra = lastNonHtmlSample ? ` Detalle último intento: "${lastNonHtmlSample.replace(/</g,'&lt;')}"` : '';
+  throw new Error('❌ Error al generar: La respuesta no parece HTML utilizable tras 60 minutos.' + extra);
 }
 
 function brandSlug(){
@@ -930,6 +966,7 @@ async function generateFromPrompt(){
   const thinking = addMsg('assistant', 'Generando tu funnel… ⏳');
 
   try{
+    // registro opcional (slug del proyecto generado)
     try{
       await fetch(CRM_ENDPOINT, {
         method:'POST', headers:{ 'Content-Type':'text/plain;charset=UTF-8' },
@@ -937,29 +974,33 @@ async function generateFromPrompt(){
       }).then(r=>r.json());
     }catch(_){}
 
-    const html = await sendToMake(payload);
-    thinking.remove();
+    // Espera robusta con reintentos sin cortar la UI
+    const html = await awaitHTMLWithRetries(payload, thinking);
 
+    // PREVIEW
+    thinking.remove();
     if(lastBlobURL) URL.revokeObjectURL(lastBlobURL);
     lastHTML = html;
     lastBlobURL = URL.createObjectURL(new Blob([html], {type:'text/html;charset=utf-8'}));
-    previewFrame.removeAttribute('sandbox');
+    previewFrame.removeAttribute('sandbox'); 
     previewFrame.srcdoc = html;
     codeBox.textContent = html;
     $('#previewModal').classList.remove('show-code');
     setPreview(true);
 
+    // NEW: persistir landing en pf_landings
     const brand = BrandStore.get();
     const id = `landing-${Date.now()}`;
     const title = `${brand?.name || 'Mi marca'} — ${selectedTemplate?.name || 'custom'}`;
     addLandingToLocal({ id, title, html });
 
+    // Re-pintar sección de recientes
     renderRecents();
 
     addMsg('assistant', `Listo ✅ Guardé tu landing. Podés verla en “Últimas landings” y publicarla desde <a href="/publish-tester">Dominio</a>.`);
     composer.value=''; selectedTemplate = null;
   }catch(err){
-    thinking.textContent = 'Hubo un problema: ' + (err.message || err);
+    thinking.innerHTML = (err?.message || String(err));
   }
 }
 
