--- a/public/index.html
+++ b/public/index.html
@@ -296,7 +296,7 @@ hr.sep{border:0;height:1px;background:linear-gradient(90deg,rgba(11,95,255,.18),
       <div class="tabs" role="tablist" aria-label="Secciones">
         <a class="tab active" role="tab" aria-selected="true" href="/">Creador</a>
         <a class="tab" role="tab" href="/crm" id="navLeads">Leads</a>
-        <a class="tab" role="tab" href="/secuencias" id="navSeq">Secuencias</a>
+        <a class="tab" role="tab" href="/Editor" id="navSeq">Editor</a>
         <a class="tab" role="tab" href="/analytics" id="navAnalytics">Analytics</a>
         <a class="tab" role="tab" href="/publish-tester" id="navDominio" title="Configurar dominio">Dominio</a>
       </div>
